[gd_scene load_steps=11 format=3 uid="uid://dq8ci8ne0g5ry"]

[ext_resource type="Texture2D" uid="uid://b4rufq2y645ma" path="res://art/particle-sheet_sparkle 1.png" id="1_53tg3"]
[ext_resource type="Texture2D" uid="uid://b5squs38b0xom" path="res://art/particles/particle-sheet_sparkle 2.png" id="2_7exh2"]
[ext_resource type="Texture2D" uid="uid://ud00vxutjfrt" path="res://art/particles/particle-sheet_sparkle 3.png" id="3_2rqml"]
[ext_resource type="Texture2D" uid="uid://cg4q2jjn7q3rh" path="res://art/particles/particle-sheet_sparkle 4.png" id="4_5k33d"]
[ext_resource type="Texture2D" uid="uid://dvx6adopg10fg" path="res://art/particles/particle-sheet_sparkle 5.png" id="5_q7dmf"]
[ext_resource type="Texture2D" uid="uid://b6lafnifrxvrq" path="res://art/particles/particle-sheet_sparkle 6.png" id="6_6gwda"]
[ext_resource type="Script" path="res://effects/aura.gd" id="7_7m6ry"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_my5dk"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 2
emission_sphere_radius = 50.0
inherit_velocity_ratio = 0.25
angular_velocity_min = -100.0
angular_velocity_max = 100.0
orbit_velocity_min = -0.0999999
orbit_velocity_max = 0.1
radial_velocity_min = -2.23517e-05
radial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
tangential_accel_min = -60.0
tangential_accel_max = 60.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_ag7cn"]
frames = 6
speed_scale = 5.8
frame_0/texture = ExtResource("1_53tg3")
frame_1/texture = ExtResource("2_7exh2")
frame_1/duration = 1.0
frame_2/texture = ExtResource("3_2rqml")
frame_2/duration = 1.0
frame_3/texture = ExtResource("4_5k33d")
frame_3/duration = 1.0
frame_4/texture = ExtResource("5_q7dmf")
frame_4/duration = 1.0
frame_5/texture = ExtResource("6_6gwda")
frame_5/duration = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4dbfo"]
resource_local_to_scene = true
radius = 50.0

[node name="Aura" type="GPUParticles2D"]
z_index = 1
z_as_relative = false
amount = 200
process_material = SubResource("ParticleProcessMaterial_my5dk")
texture = SubResource("AnimatedTexture_ag7cn")
randomness = 0.5
script = ExtResource("7_7m6ry")

[node name="ConnectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 524288

[node name="ConnectionCollision" type="CollisionShape2D" parent="ConnectionArea"]
shape = SubResource("CircleShape2D_4dbfo")

[node name="HealTimer" type="Timer" parent="."]

[connection signal="finished" from="." to="." method="_on_finished"]
[connection signal="timeout" from="HealTimer" to="." method="_on_heal_timer_timeout"]
